--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hi! I'm a Full-Stack Developer with a passion for creating high-performing software solutions that make a real-world impact. I graduated with a Bachelor’s in Computer Science from the University of Illinois, and since then, I've had the opportunity to work on everything from backend systems in Java and C++ to dynamic web applications using Angular.
-        I specialize in building intuitive user interfaces and streamlining complex operations, especially in areas like warehouse automation and logistics solutions. I find great joy in mentoring junior developers, optimizing development workflows, and staying ahead of industry trends.  
-        When I'm not coding, you’ll find me enjoying the outdoors—whether it’s rock climbing, hiking, or simply taking walks to clear my mind. These activities keep me grounded and remind me that persistence and problem-solving extend beyond just tech.
-        I'm always excited to explore cutting-edge technologies and collaborate on projects that push the boundaries of what’s possible.</p>
+    <p>Hi! I'm a Full-Stack Developer with a passion for creating high-performing software solutions that make a real-world impact. I graduated with a Bachelor’s in Computer Science from the University of Illinois, and since then, I've had the opportunity to work on everything from backend systems in Java and C++ to dynamic web applications using Angular. </p>
+    <p>I specialize in building intuitive user interfaces and streamlining complex operations, especially in areas like warehouse automation and logistics solutions. I find great joy in mentoring junior developers, optimizing development workflows, and staying ahead of industry trends.  </p>
+    <p>When I'm not coding, you’ll find me enjoying the outdoors—whether it’s rock climbing, hiking, or simply taking walks to clear my mind. These activities keep me grounded and remind me that persistence and problem-solving extend beyond just tech. </p>
+    <p>I'm always excited to explore cutting-edge technologies and collaborate on projects that push the boundaries of what’s possible.</p>
   </section>
 
   <section id="contact">
