--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Fernando Martinez</h1>
     <nav>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
@@ -43,13 +43,13 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: yourname@email.com</p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+    <p>Email: martinez.fern97@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/martinezfern97" target="_blank">github.com/martinezfern97</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/fernandomartinez97/" target="_blank">linkedin.com/in/fernandomartinez97</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Fernando Martinez</p>
   </footer>
 </body>
 </html>
